--- a/Proxmox/tasks/env.yml
+++ b/Proxmox/tasks/env.yml
@@ -19,7 +19,9 @@
           - JARVIS_CF_R2_ENDPOINT
           - JARVIS_CF_R2_TOKENS
           - JARVIS_DOMAIN
+          - JARVIS_GOOGLE_SERVICE_JSON
           - JARVIS_GITHUB_TOKEN_SSH
+          - JARVIS_HA_DECRYPT_KEY
           - JARVIS_POSTGRES_PASSWORD
       local_config:
           JARVIS_BOT_NAME: '{{ project | title }}'
@@ -34,6 +36,14 @@
           JARVIS_COMMUNITY_SCRIPTS_URL: 'https://raw.githubusercontent.com/community-scripts/ProxmoxVE/main'
           JARVIS_ICON_CDN: 'https://cdn.jsdelivr.net/gh/selfhst/icons@main/svg/'
           JARVIS_SERVICES:
+              docker:
+                  id: 253
+                  name: Docker
+                  subtitle: Container Platform
+                  logo: docker.svg
+                  port: 2375
+                  hidden: true
+
               voidauth:
                   id: 253
                   name: Auth
@@ -61,6 +71,115 @@
                   skip_auth: true
                   hidden: true
 
+              backrest:
+                  id: 253
+                  name: Backup
+                  subtitle: Backrest Backup Manager
+                  logo: tpdb.svg
+                  port: 9898
+                  subdomains: [backup]
+
+              code:
+                  id: 253
+                  name: Code
+                  subtitle: VS Code Server
+                  logo: visual-studio-code.svg
+                  port: 8888
+                  subdomains: [code]
+
+              qbittorrent:
+                  id: 253
+                  name: Torrent
+                  subtitle: qBitTorrent Downloader
+                  logo: utorrent.svg
+                  port: 8080
+                  subdomains: [torrent]
+
+              prowlarr:
+                  id: 253
+                  name: Prowlarr
+                  subtitle: Indexer Manager
+                  logo: prowlarr.svg
+                  port: 9696
+                  subdomains: [prowlarr]
+
+              radarr:
+                  id: 253
+                  name: Radarr
+                  subtitle: Movie Manager
+                  logo: radarr.svg
+                  port: 7878
+                  subdomains: [radarr]
+
+              sonarr:
+                  id: 253
+                  name: Sonarr
+                  subtitle: TV Manager
+                  logo: sonarr.svg
+                  port: 8989
+                  subdomains: [sonarr]
+
+              sonarr-anime:
+                  id: 253
+                  name: Anime
+                  subtitle: Anime Manager
+                  logo: anilist.svg
+                  port: 8990
+                  subdomains: [anime]
+
+              bazarr:
+                  id: 253
+                  name: Bazarr
+                  subtitle: Subtitle Manager
+                  logo: bazarr.svg
+                  port: 6767
+                  subdomains: [bazarr]
+
+              jellyseerr:
+                  id: 253
+                  name: Jellyseerr
+                  subtitle: Request Manager
+                  logo: jellyseerr.svg
+                  port: 5055
+                  subdomains: [request]
+                  skip_auth: true
+
+              proxmox:
+                  id: 200
+                  name: Jarvis Console
+                  subtitle: Proxmox Dashboard
+                  logo: proxmox.svg
+                  port: 8006
+                  https: true
+                  subdomains: [pm]
+                  insecure: true
+
+              traefik:
+                  id: 205
+                  name: Proxy
+                  subtitle: Traefik Reverse Proxy
+                  logo: at-t.svg
+                  port: 8080
+                  subdomains: [proxy]
+                  is_internal: true
+
+              files:
+                  id: 245
+                  name: Files
+                  subtitle: NAS & File Manager
+                  logo: filebrowser-quantum.svg
+                  port: 80
+                  subdomains: [files]
+
+              authelia:
+                  id: 247
+                  name: Authelia
+                  subtitle: Authentication Server
+                  logo: authelia.svg
+                  port: 9091
+                  subdomains: [auth]
+                  skip_auth: true
+
               jellyfin:
                   id: 248
                   name: Movies
@@ -68,14 +187,6 @@
                   logo: streamyfin.svg
                   port: 8096
                   subdomains: [media, jellyfin]
-
-              qbittorrent:
-                  id: 249
-                  name: Torrent
-                  subtitle: qBitTorrent Downloader
-                  logo: utorrent.svg
-                  port: 80
-                  subdomains: [torrent]
 
               home:
                   id: 250
@@ -94,66 +205,6 @@
                   path: /admin
                   subdomains: [dns]
                   middlewares: [pihole-redirect]
-
-              docker:
-                  id: 253
-                  name: Docker
-                  subtitle: Container Platform
-                  logo: docker.svg
-                  port: 2375
-                  hidden: true
-
-              traefik:
-                  id: 205
-                  name: Proxy
-                  subtitle: Traefik Reverse Proxy
-                  logo: at-t.svg
-                  port: 8080
-                  subdomains: [proxy]
-                  is_internal: true
-
-              authelia:
-                  id: 247
-                  name: Authelia
-                  subtitle: Authentication Server
-                  logo: authelia.svg
-                  port: 9091
-                  subdomains: [auth]
-                  skip_auth: true
-
-              backrest:
-                  id: 253
-                  name: Backup
-                  subtitle: Backrest Backup Manager
-                  logo: tpdb.svg
-                  port: 9898
-                  subdomains: [backup]
-
-              code:
-                  id: 253
-                  name: Code
-                  subtitle: VS Code Server
-                  logo: visual-studio-code.svg
-                  port: 8888
-                  subdomains: [code]
-
-              files:
-                  id: 245
-                  name: Files
-                  subtitle: NAS & File Manager
-                  logo: filebrowser-quantum.svg
-                  port: 80
-                  subdomains: [files]
-
-              proxmox:
-                  id: 200
-                  name: Jarvis Console
-                  subtitle: Proxmox Dashboard
-                  logo: proxmox.svg
-                  port: 8006
-                  https: true
-                  subdomains: [pm]
-                  insecure: true
 
   block:
       - name: Ensure Doppler is Installed
