--- a/Proxmox/tasks/instances/docker_lxc/postgres.yml
+++ b/Proxmox/tasks/instances/docker_lxc/postgres.yml
@@ -41,6 +41,11 @@
                       interval: 10s
                       timeout: 5s
                       retries: 5
+                    logging:
+                      driver: "json-file"
+                      options:
+                        max-size: "10m"
+                        max-file: "3"
             owner: '{{ mapped_uid }}'
             group: '{{ mapped_uid }}'
             mode: '0666'
