--- a/Proxmox/tasks/instances/traefik_lxc.yml
+++ b/Proxmox/tasks/instances/traefik_lxc.yml
@@ -21,9 +21,6 @@
         failed_when: false
         changed_when: false
 
-      - set_fact:
-            instance_exists: '{{ instance_check.status | default(0) == 200 }}'
-
       - name: '{{ instance.hostname | upper }}: Create Config Directories on Host'
         file:
             path: '{{ item }}'
@@ -38,6 +35,7 @@
             - '{{ paths.cloudflared_config }}'
 
       - name: '{{ instance.hostname | upper }}: Provision Instance'
+        when: instance_check.status | default(0) != 200
         block:
             - name: '{{ instance.hostname | upper }}: Stop and Destroy LXC'
               shell: pct stop {{ id }}; pct destroy {{ id }}
@@ -102,8 +100,6 @@
 
             - name: '{{ instance.hostname | upper }}: Start LXC'
               command: pct start {{ id }}
-
-        when: not instance_exists
 
       - name: '{{ instance.hostname | upper }}: Configure service'
         block:
