--- a/Proxmox/tasks/system/security.yml
+++ b/Proxmox/tasks/system/security.yml
@@ -1,24 +1,37 @@
 ---
+- set_fact:
+      prefix: 'SECURITY'
+
 - name: Install Security Tools
   apt: { name: [argon2, python3-bcrypt] }
 
-- name: Generate Argon2id
+- name: '{{ prefix }}:Generate Argon2id'
   shell: echo -n "$PASS" | argon2 "$(head -c 16 /dev/urandom | base64)" -id -t 3 -k 65536 -p 4 -l 32 -e
   environment: { PASS: '{{ env.JARVIS_ADMIN_PASSWORD }}' }
   register: argon2
   changed_when: false
   no_log: true
 
-- name: Generate Bcrypt
+- name: '{{ prefix }}: Generate Bcrypt hash'
   command: python3 -c "import bcrypt, os; print(bcrypt.hashpw(os.environ['PASS'].encode(), bcrypt.gensalt()).decode())"
   environment: { PASS: '{{ env.JARVIS_ADMIN_PASSWORD }}' }
   register: bcrypt
   changed_when: false
   no_log: true
 
+- name: '{{ prefix }}: Generate Google Drive access token'
+  shell: |
+      command -v gcloud &>/dev/null || ([[ "$OSTYPE" == "darwin"* ]] && brew install --cask google-cloud-sdk || curl -sSL https://sdk.cloud.google.com | bash)
+      gcloud auth activate-service-account --key-file=<(echo '{{ env.JARVIS_GOOGLE_SERVICE_JSON }}') --quiet 2>/dev/null && gcloud auth print-access-token --scopes=https://www.googleapis.com/auth/drive
+  args: { executable: /bin/bash }
+  register: gdrive_token
+  delegate_to: localhost
+  when: env.JARVIS_GOOGLE_SERVICE_JSON is defined
+
 - set_fact:
       env: "{{ env | combine({
           'JARVIS_ADMIN_PASSWORD_ARGON': argon2.stdout | trim,
-          'JARVIS_ADMIN_PASSWORD_BCRYPT': bcrypt.stdout | trim
+          'JARVIS_ADMIN_PASSWORD_BCRYPT': bcrypt.stdout | trim,
+          'JARVIS_GDRIVE_ACCESS_TOKEN': gdrive_token.stdout | default('') | trim
           }) }}"
   no_log: true
